--- a/ToDosApplication/wwwroot/css/site.css
+++ b/ToDosApplication/wwwroot/css/site.css
@@ -1,6 +1,9 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
-
+/* Font Import */
+/* @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800'); */
+/* Font Import */
+/*Author A00246003 */
 a.navbar-brand {
   white-space: normal;
   text-align: center;
@@ -26,25 +29,60 @@ a {
 
 /* Sticky footer styles
 -------------------------------------------------- */
-html {
-  font-size: 14px;
+html, body, div, span, h1, h2, h3, h4, h5, h6, p, a, form, label, table, tbody, tfoot, thead, tr, th, td, footer, header,  menu, nav, section{
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+
+body {
+    font-family: 'Montserrat', sans-serif;
+    background: #f1efef;
+    font-size: 13px;
 }
 @media (min-width: 768px) {
   html {
     font-size: 16px;
   }
 }
+.grid-heading {
+    display: inline-block;
+    width: 100%;
+    background: #c6c9d0;
+    position: relative;
+    padding: 10px 15px;
+    min-height: 40px;
+}
 
-.border-top {
-  border-top: 1px solid #e5e5e5;
+.grid-heading h4 {
+    color: #535a68;
+    font-size: 15px;
+    font-weight: bold;
+    display: inline-block;
 }
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
+.grey-btn {
+    background: #767571;
+    color: #fff;
+    font-size: 12px;
+    margin-top:15px
+}
+table {
+    background: #fff;
+    width: 100% !important; /*margin:0 0 15px !important;*/
+    margin: 0 0 0px !important;
 }
 
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+table th {
+    background: #1a2942;
+    font-size: 0.8rem;
+    color: #fff;
+    font-weight: 600;
 }
+
+
 
 button.accept-policy {
   font-size: 1rem;
@@ -53,19 +91,47 @@ button.accept-policy {
 
 /* Sticky footer styles
 -------------------------------------------------- */
+
+label {
+    display: inline-block;
+    position: relative;
+    width: 100%;
+    color: #505050;
+    font-weight: 500;
+    font-size: 0.9rem;
+    margin: 0 0 5px 0;
+}
+
+
+.grid-box {
+    display: inline-block;
+    width: 100%;
+    background: #ffffff;
+    box-shadow: 0 0 5px rgba(0,0,0,0.15);
+    margin: 0 0 15px;
+}
+
+.grid-inner {
+    display: inline-block;
+    width: 100%;
+    padding: 20px;
+}
+.form-row {
+    display: inline-block;
+    width: 100%;
+    margin: 0 0 0px 0;
+}
+.form-control {
+    height: 37px;
+    border-color: #acacac;
+    font-size: 13px;
+}
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
-}
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
 }
